Increased bottom margin on navigation

--- a/contact.html
+++ b/contact.html
@@ -19,7 +19,7 @@
       Email us at
       <a href="mailto:hello@croissant.com">hello@croissant.com</a> for more info
     </p>
-    <div class="d-flex justify-content-evenly">
+    <div class="d-flex justify-content-evenly mb-5">
       <div><a href="/">Homepage</a></div>
       <div><a href="/photo.html">Photo</a></div>
       <div><a href="/contact.html">Contact</a></div>
