--- a/photo.html
+++ b/photo.html
@@ -21,7 +21,7 @@
         alt="croissant"
         class="d-block img-fluid rounded border mb-5"
       />
-      <div class="d-flex justify-content-evenly">
+      <div class="d-flex justify-content-evenly mb-5">
         <div><a href="/">Homepage</a></div>
         <div><a href="/photo.html">Photo</a></div>
         <div><a href="/contact.html">Contact</a></div>
