--- a/photo.html
+++ b/photo.html
@@ -19,7 +19,7 @@
       <img
         src="/images/croissant.jpeg"
         alt="croissant"
-        class="d-block img-fluid rounded border mb-5"
+        class="d-block mx-auto img-fluid rounded border mb-5"
       />
       <div class="d-flex justify-content-evenly mb-5">
         <div><a href="/">Homepage</a></div>
